--- a/project6.html
+++ b/project6.html
@@ -505,10 +505,10 @@
             <div class="project-card-name">
                 <div class="project-title">Hel No Hell</div>
                 <div class="project-content">
-                    CodeCollaborate는 개발자들을 위한 협업 플랫폼으로, 프로젝트 관리와 팀워크를 지원하기 위해 설계되었습니다. React와 Node.js를 사용하여 개발되었으며, 주요
-                    기능으로는 코드 리뷰, 실시간 채팅, 이슈 트래킹 등이 있습니다. MongoDB를 통해 데이터를 관리하고, Socket.io를 활용하여 실시간 통신 기능을 구현했습니다. AWS를
-                    이용해 안정적인 호스팅과 배포를 지원합니다. CodeCollaborate는 전 세계 개발자들이 원활하게 협업하고, 프로젝트를 성공적으로 완수할 수 있도록 도와줍니다. 이 프로젝트는
-                    효율적인 협업과 기술적 도전을 통해 완성되었습니다.</div>
+                    1. 공유킥보드 헬맷 미착용 관련 사고 예방을 위한 프로젝트 <br>
+                    2. 공유킥보드 헬맷 대여 서비스 앱개발(프론트엔드 담당) <br>
+                    3. 인천대학교 PBL 융합대회 최우수상 수상   
+                </div>
             </div>
             <div class="project-card-image">
                 <img src="image/p6-main.png" class="project-image" />
