--- a/index.html
+++ b/index.html
@@ -1222,7 +1222,7 @@
                 도전을 두려워하지 않는<br />개발자, 마서영입니다.
               </p>
               <p class="intro-text-detail font-regular">
-                코로나 이후 빠르게 변화하는 금융IT 산업에 매력을 느꼈습니다.
+                코로나 이후 빠르게 변화하는 IT 산업에 매력을 느꼈습니다.
                 <br />꼼꼼한 태도로 문제해결에 기여하고 싶습니다. <br />함께 도전하고 성장하는 과정에서 큰
                 성취를 이루고 싶습니다.
               </p>
