--- a/index.html
+++ b/index.html
@@ -1312,33 +1312,33 @@
               </div>
               <div class="exp-card">
                 <div class="exp-card-period-wrapper flex-center">
-                  <div class="exp-card-period font-regular">3개월</div>
+                  <div class="exp-card-period font-regular">6개월</div>
                 </div>
-                <div class="exp-card-company font-bold">극지연구소</div>
-                <div class="exp-card-term">2021.11~2022.02</div>
+                <div class="exp-card-company font-bold">인천대학교 AI Expert 특성화사업 참여</div>
+                <div class="exp-card-term">2023.09~2024.02</div>
                 <div class="exp-card-team">
                   <div class="exp-card-team-name font-bold">
-                    정책개발실 일용직 근무
+                    AICE 자격증 스터디
                   </div>
                 </div>
                 <div class="exp-card-task">
                   <div class="point svg-filter"></div>
                   <div class="exp-card-task-text font-regular">
-                    극지이슈리포트 발행 사무보조
+                    Tabular 데이터 분석 및 처리 과정 학습
                   </div>
                 </div>
                 <div class="exp-card-proj">
                   <div class="exp-card-proj-name font-bold">
-                    kopri 홈페이지 내 극지정책아카이브 데이터 운영 및 관리
+                    인천대학교 인공지능경진 대회 참가(장려상 수상)
                   </div>
                 </div>
                 <div class="exp-card-task-term font-regular">
-                  2022.01~2022.02
+                  2023.10~2023.12
                 </div>
                 <div class="exp-card-task-detail">
                   <div class="point svg-filter"></div>
                   <div class="exp-card-task-detail-text font-regular">
-                    데이터 정렬 및 중복 관리-웹 크롤링 적용
+                    AI 기반 싱크홀 발생 예측 시스템 - 데이터 전처리 수행
                   </div>
                 </div>
               </div>
