--- a/project5.html
+++ b/project5.html
@@ -505,7 +505,7 @@
             <div class="project-card-name">
                 <div class="project-title">경제라디오 스터디</div>
                 <div class="project-content">
-                    이진우의 손에 잡히는 경제 라디오 스터디에 참여하였습니다. 일주일에 3개 이상의 라디오 내용을 듣고 정리하는 습관을 기르고 경제 지식을 쌓았습니다.
+                    이코르 경제 연합 동아리 15기로 이진우의 손에 잡히는 경제 라디오 스터디에 참여하였습니다. 일주일에 3개 이상의 라디오 내용을 듣고 정리하는 습관을 기르고 경제 지식을 쌓았습니다.
                     전세계 시장경제의 동향을 파악하고, 주식 투자 전략을 배웠습니다. 또한 시시각각 바뀌는 국내 및 국외 금융정책이 개인에게 미치는 영향을 이해하고 그 상관관계를 파악해볼 수 있었습니다.
                 </div>
             </div>
@@ -515,7 +515,7 @@
             <div class="project-card-icons">
                 <div class="project-row">
                     <img src="image/period.svg" class="project-icon" />
-                    <div class="project-content-detail">23.07~23.8 / 2개월</div>
+                    <div class="project-content-detail">23.03~23.8 / 6개월</div>
                 </div>
                 <div class="project-github-link">
                     <img src="image/notion.svg" class="project-icon" />
