--- a/index.html
+++ b/index.html
@@ -1401,7 +1401,7 @@
             <div class="proj" onclick="location.href='project5.html'">
               <img src="image/p5-main.png" alt="프로젝트 이미지" class="proj-main-img" />
               <div class="proj-content">
-                <div class="proj-content-title font-bold">이코르 경제연합동아리</div>
+                <div class="proj-content-title font-bold">이코르 경제연합동아리 15기</div>
                 <p class="proj-content-text font-regular">
                   코로나19의 장기화로 야외활동이 줄면서 주식과 펀드에 대한 관심이 증가했습니다. 동시에 공모주 청약에 도전하면서 경제/금융에 대해 무지함을 느꼈습니다.
                   이를 해결하고자 경제연합동아리에 들어가 경제라디오 스터디에 참여했습니다.
