--- a/index.html
+++ b/index.html
@@ -1276,7 +1276,7 @@
                   <div class="exp-card-period font-regular">12개월</div>
                 </div>
                 <div class="exp-card-company font-bold">
-                  PINCOM 동아리
+                  인천대학교 멋쟁이사자처럼 동아리 11기
                 </div>
                 <div class="exp-card-term">2023.03~2024.02</div>
                 <div class="exp-card-team">
