--- a/index.html
+++ b/index.html
@@ -1276,7 +1276,7 @@
                   <div class="exp-card-period font-regular">12개월</div>
                 </div>
                 <div class="exp-card-company font-bold">
-                  인천대학교 멋쟁이사자처럼 동아리 11기
+                  PICOM IT 동아리
                 </div>
                 <div class="exp-card-term">2023.03~2024.02</div>
                 <div class="exp-card-team">
@@ -1314,7 +1314,7 @@
                 <div class="exp-card-period-wrapper flex-center">
                   <div class="exp-card-period font-regular">6개월</div>
                 </div>
-                <div class="exp-card-company font-bold">인천대학교 AI Expert 과정 참여</div>
+                <div class="exp-card-company font-bold">인천대학교 AI Expert 과정 수료</div>
                 <div class="exp-card-term">2023.09~2024.02</div>
                 <div class="exp-card-team">
                   <div class="exp-card-team-name font-bold">
