--- a/index.html
+++ b/index.html
@@ -1219,7 +1219,7 @@
             <div class="intro-content">
               <img class="intro-quote svg-filter" src="image/quote.svg" />
               <p class="intro-text font-bold">
-                도전을 두려워하지 않는<br />개발자, 마서영입니다.
+                안녕하세요<br /> 백엔드 개발자, 마서영입니다.
               </p>
               <p class="intro-text-detail font-regular">
                 코로나 이후 빠르게 변화하는 IT 산업에 매력을 느꼈습니다.
