--- a/index.html
+++ b/index.html
@@ -1043,7 +1043,7 @@
         </div>
         <div class="name-tag">
           <div class="name font-bold">마서영</div>
-          <div class="sub-name font-regular">백엔드 개발자</div>
+          <div class="sub-name font-regular">BE Developer</div>
         </div>
         <div class="info">
           <div class="info-detail">
